# librislog

./: .env.example  .gitignore  404.html  CNAME  README.md  about.html  dashboard.yml  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.yml  hashmap.json  index.html  library-page.yml  pyproject.toml  version.json
.github/: FUNDING.yml
.opencode/: opencode.jsonc
.plan/: 09-delete-book-cover-cleanup.md  10-cover-picker.md  11-google-books-optional-supplement.md  15-show-language-and-pages-in-import-SUMMARY.md  15-show-language-and-pages-in-import.md  16-isbn-barcode-scanner-SUMMARY.md  16-isbn-barcode-scanner.md  17-did-not-finish-status-SUMMARY.md  17-did-not-finish-status.md  20-api-docs-in-settings-SUMMARY.md  20-api-docs-in-settings.md  21-multi-user-auth-system-SUMMARY.md  21-multi-user-auth-system.md  22-optional-oidc-auth-SUMMARY.md  22-optional-oidc-auth.md  23-restructure-sidebar-menu-SUMMARY.md  23-restructure-sidebar-menu.md  24-dashboard-page-SUMMARY.md  24-dashboard-page.md  26-dashboard-quote-backend-caching-SUMMARY.md  26-dashboard-quote-backend-caching.md  31-normalize-tags-v2.md  35-reading-progress-tracker.md  38-timezone-aware-frontend.md  43-extract-main-py-routers.md  45-add-book-language-field.md  48-data-import-export.md  50-backup-and-restore.md  51-chart-library-refactor.md  53-top-3-authors-with-overlapping-covers.md  54-reading-log-date-from-end-date.md  55-auto-search-cover-candidates.md  56-hardcover-cover-source.md  57-hardcover-import-source.md  58-thalia-cover-source.md  edit-book-additional-fields.md
api/: index.html  setup.html
assets/: about.md.B1WHi62p.js  about.md.B1WHi62p.lean.js  about.md.B5g1HME1.js  about.md.B5g1HME1.lean.js  about.md.DqDQ1_vS.js  about.md.MMAqsiRY.js  (+171 more)
backend/: pyproject.toml
backend/alembic/versions/: 1a2b3c4d5e6f_add_embed_token_table.py  4d8b9a2c1e6f_add_did_not_finish_status.py  86fa9b4f6d61_nest_import_mapping_config.py  a1b2c3d4e5f6_make_author_page_count_required.py  a9c1d0e5f2b3_add_import_mapping_table.py  afd59a8c52de_add_reading_progress_table.py  b0b8f41f6b20_add_multi_user_and_api_keys.py  bfe919c8b47b_add_theme_and_custom_theme_to_user_.py  c1d2e3f4a5b6_create_tag_and_book_tag_tables.py  c31124664378_flip_import_mapping_direction.py  c3f4d7a9b2e1_add_oidc_link_table.py  d4e5f6a7b8c9_drop_tags_column_from_book.py  e7f8a9b0c1d2_add_timezone_to_usersettings.py  f4c2b8a1d9e3_add_language_to_book.py  f7e9d1c3b5a2_make_isbn_unique_per_user.py
backend/app/: auth.py  config.py  database.py  main.py  models.py  oidc.py  schemas.py
backend/app/i18n/: de.json  en.json  es.json  fr.json  zh.json
backend/app/routers/: admin.py  auth.py  books.py  config.py  cover_candidates.py  covers.py  data.py  docs.py  embed.py  health.py  hygiene.py  import_.py  oidc.py  profile.py  progress.py  statistics.py  users.py
backend/app/services/: backup_restore.py  book_import.py  cover_import.py  cover_storage.py  data_export.py  data_import.py  isbn_utils.py  quote_cache.py  tags.py  transform_engine.py  user_deletion.py
backend/data/: librislog.db
backend/tests/: conftest.py  test_admin.py  test_auth_profile_users.py  test_backup_restore.py  test_books.py  test_cover_candidates.py  test_cover_storage.py  test_covers.py  test_dashboard.py  test_data.py  test_data_import.py  test_docs.py  test_embed.py  test_hygiene.py  test_import.py  test_main.py  test_oidc.py  test_progress.py  test_statistics.py  test_transform_engine.py
cli/: pyproject.toml
cli/src/llc/: __init__.py  __main__.py  _gh.py  _git.py  _interactive.py  branch.py  docs.py  main.py  pr.py  sync.py  tag.py  test.py
cli/tests/: conftest.py  test_gh.py  test_git.py  test_interactive.py  test_main.py  test_pr.py  test_sync.py  test_tag.py
(+1067 files in other folders)
