[project]
name = "librislog"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
    "librislog-backend",
    "llc",
]

[tool.uv.sources]
librislog-backend = { workspace = true }
llc = { workspace = true }

[tool.uv.workspace]
members = ["backend/", "cli/"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.14.0",
]

[tool.uv]
package = false
