[project]
name = "librislog-backend"
version = "0.1.0"
description = "LibrisLog book tracking API"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "authlib>=1.6.5",
    "cryptography>=46.0.3",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pycountry>=24.6.1",
    "python-multipart>=0.0.28",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
