[project]
name = "librislog-backend"
version = "v0.0.0-dev"
description = "LibrisLog book tracking API"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "authlib>=1.6.5",
    "cachetools>=5.3.3",
    "cryptography>=46.0.3",
    "curl-cffi>=0.15.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "playwright>=1.55.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pycountry>=24.6.1",
    "python-multipart>=0.0.28",
    "scrapling>=0.4.8",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.46.0",
    "browserforge>=1.2.4",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
