[project]
name = "librislog-backend"
version = "v0.0.0-dev"
description = "LibrisLog book tracking API"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "authlib>=1.6.5",
    "cachetools>=5.3.3",
    "cryptography>=46.0.3",
    "curl-cffi>=0.15.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "playwright>=1.55.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pycountry>=24.6.1",
    "python-multipart>=0.0.28",
    "scrapling>=0.4.8",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.46.0",
    "browserforge>=1.2.4",
    "restrictedpython>=8.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "error::ResourceWarning",
    "ignore::DeprecationWarning:lxml\\.html.*",
]
addopts = "-ra --cov=app --cov-report term-missing"
