[project]
name = "llc"
version = "0.1.0"
description = "Developer CLI for the librislog project"
requires-python = ">=3.14"
dependencies = [
    "questionary>=2.0.0",
    "typer>=0.25.1",
    "rich>=13.9.4",
]

[project.scripts]
llc = "llc.main:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llc"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
